--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.8.2",
     "react-scripts": "^5.0.1",
     "react-stacked-center-carousel": "^1.0.14",
