--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wallpaperapp",
+  "name": "wallpaperapp-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite --port 5173",
@@ -13,11 +13,10 @@
     "axios": "^1.12.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-masonry-css": "^1.0.16",
-    "react-router-dom": "^7.8.2",
-    "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.28.0",
     "react-stacked-center-carousel": "^1.0.14",
     "swiper": "^11.2.10"
   },
@@ -25,8 +24,8 @@
     "@eslint/js": "^9.33.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.12",
