prepare for vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -16,31 +16,19 @@
   "routes": [
     {
       "src": "/static-images/(.*)",
-      "dest": "/backend/public/images/$1"
+      "dest": "/backend/server.js"
     },
     {
       "src": "/api/(.*)",
       "dest": "/backend/server.js"
     },
     {
-      "src": "/auth/(.*)",
-      "dest": "/backend/server.js"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/backend/server.js"
-    },
-    {
-      "src": "/external/(.*)",
-      "dest": "/backend/server.js"
-    },
-    {
-      "src": "/profile/(.*)",
-      "dest": "/backend/server.js"
-    },
-    {
       "src": "/health",
       "dest": "/backend/server.js"
+    },
+    {
+      "src": "/(.*\\.(js|css|ico|png|jpg|jpeg|gif|svg|webp))",
+      "dest": "/frontend/dist/$1"
     },
     {
       "src": "/(.*)",
