--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
-    "vercel-build": "echo 'Building for Vercel...'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm install"
   },
   "keywords": ["wallpaper", "api", "node", "express", "mongodb", "vercel"],
   "author": "",
