--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,28 @@
 {
-    "version":2,
+    "version": 2,
     "builds": [
         {
-            "src": "*.js",
+            "src": "server.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
+            "src": "/health",
+            "dest": "/server.js"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "/server.js"
+        },
+        {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/server.js"
         }
-    ]
+    ],
+    "functions": {
+        "server.js": {
+            "maxDuration": 10
+        }
+    }
 }
