--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,28 +1,15 @@
 {
-    "version": 2,
+    "version":2,
     "builds": [
         {
-            "src": "server.js",
+            "src": "*.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/server.js"
-        },
-        {
-            "src": "/health",
-            "dest": "/server.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/server.js"
+            "dest": "/"
         }
-    ],
-    "functions": {
-        "server.js": {
-            "maxDuration": 30
-        }
-    }
+    ]
 }
