--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm install"
+    "dev": "nodemon server.js"
   },
-  "keywords": ["wallpaper", "api", "node", "express", "mongodb", "vercel"],
   "author": "",
   "license": "ISC",
   "description": "",
